# flowtorch-new

./: LICENSE.md  README.md  main.py  pyproject.toml
src/: lazy.py
src/bijectors/: affine.py  base.py  elementwise.py
src/bijectors/ops/: affine.py
src/distributions/: __init__.py
src/flowtorch/: __init__.py  bijective_tensor.py
src/flowtorch/bijectors/: __init__.py  affine.py  base.py  elementwise.py
src/flowtorch/bijectors/ops/: affine.py
src/flowtorch/distributions/: flow.py
src/flowtorch/ops/: __init__.py
src/flowtorch/parameters/: base.py  tensor.py
src/parameters/: tensor.py
